Updated styles for abstracted ebanx to ensure that fields look the same in redirect and credit card boxes

--- a/client/my-sites/checkout/checkout/style.scss
+++ b/client/my-sites/checkout/checkout/style.scss
@@ -318,6 +318,7 @@
 		.payment-box-section.selected:not( .no-stored-cards ) {
 			.payment-box-section-inner {
 				border-left: 3px solid $alert-green;
+				padding-top: 15px;
 			}
 			.checkout__new-card-fields {
 				background-color: #fafdf6;
